Removes Modules And Adds JSON FIles

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 				<img class="nav-item yt-logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSLTmVoX1TaF_hvBlmXATIQV9KM1b_bh6h9RvlPZ7S7a-oe_j1i6yh3vEOXpG8rYNBAGbE&usqp=CAU">
 			</div>
 
-			<div class="nav-center nav-sec">
+			<div class="nav-center nav-sec" id="nav">
 				<input class="nav-item search-input" placeholder="Search">
 			</div>
 
-			<div class="nav-right nav-sec">
+			<div class="nav-right nav-sec" id="navRight">
 				
 			</div>
 		</nav>
